--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ChainReactionApp</string>
-</resources>
+    <string name="name_title">Name:</string>
+    <string name="price_title">price:</string></resources>
